JumpScript/tests/baselines/reference/parserClassDeclaration18.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration18.jump(4,25): error TS1183: An implementation cannot be declared in ambient contexts.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration18.jump (1 errors) ====
    declare class FooBase {
        constructor(s: string);
        constructor(n: number);
        constructor(x: any) {
                            ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        }
        bar1():void;
    }